# cloud-utils

./: .gitignore  .gitlab-ci.yaml  README.md  USAGE.md  pyproject.toml
cloud_utils/: client.py  metadata.py
cloud_utils/cloud_clients/: aws.py  gcp.py
cloud_utils/cloud_clients/apis/aws/: boto.py  compute.py  dns.py  storage.py
cloud_utils/cloud_clients/apis/gcp/: compute.py  dns.py  storage.py
cloud_utils/interfaces/: compute.py  dns.py  storage.py
cloud_utils/static/: locations.py
cloud_utils/types/: compute.py  dns.py  storage.py
tests/: aws-test.py  main.py  test.py
