[tool.poetry]
name = "cloud-utils"
version = "0.0.0"
description = "Unified interface for interacticing with AWS and GCP"
authors = ["Matt Hayward <mhayward122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.20"
google-cloud-compute = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
